# innowise_laboratory

lecture_1/: pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: school.db  scripts.sql
lecture_5/: adapter.py  book_api.db  database_models.py  endpoints.py  main.py  pydantic_models.py
lecture_6/: Dockerfile  main.py  requirements.txt
